--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,8 +20,8 @@
 /* Colors */
 :root {
   --color-default: #fafafa;
-  --color-primary: #27a776;
-  --color-secondary: #161718;
+  --color-primary: #55096a;
+  --color-secondary: #410e36;
 }
 
 /* Smooth scroll behavior */
@@ -44,7 +44,7 @@ a {
 }
 
 a:hover {
-  color: #32cf93;
+  color: #840b7e;
   text-decoration: none;
 }
 
