--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -726,8 +726,9 @@ h6 {
   inset: 0;
   opacity: 0;
   transition: all ease-in-out 0.3s;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.7);
   z-index: 3;
+  font-size: 40px;
 }
 
 .gallery .gallery-links .preview-link,
