Final changes to static site

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -725,7 +725,7 @@ h6 {
 }
 
 .gallery .gallery-links {
-  position: relative;
+  position: absolute;
   inset: 0;
   opacity: 0;
   transition: all ease-in-out 0.3s;
